fix hover on mobile?

--- a/public/style.css
+++ b/public/style.css
@@ -59,12 +59,6 @@ nav {
     transition: background-color 300ms;
 }
 
-.nav-button.unstyled-link:hover,
-.nav-button.unstyled-link:active {
-    background-color: rgb(66, 126, 255);
-    cursor: pointer;
-}
-
 .button-icon {
     cursor: pointer;
     padding-top: 0.25rem;
@@ -174,11 +168,6 @@ nav {
     border: none;
     font-size: large;
     transition: background-color 300ms;
-}
-
-.button:hover {
-    background-color: rgb(66, 126, 255);
-    cursor: pointer;
 }
 
 #begin-container {
@@ -320,5 +309,15 @@ footer > p {
         max-height: 2em;
         display: flex;
         align-items: center;
+    }
+}
+
+/* only hover if media allows hovering */
+
+@media (hover: hover) {
+    .nav-button.unstyled-link:hover,
+    .button:hover {
+        background-color: rgb(66, 126, 255);
+        cursor: pointer;
     }
 }
